<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Painting App</string>
    <string name="app_description">Painting App is a project being completed for HCI course ECE9020 </string>
    <string name="here_is_your_canvas">Start Painting!</string>
    <string name="color">Color</string>
    <string name="brush_size">Brush size</string>
    <string name="erase">Erase</string>
    <string name="clear_all">Erase entire foreground</string>
    <string name="save">Save</string>
    <string name="open_image">Open image as background</string>
    <string name="your_selected_size_is">Selected size: %1$s</string>
    <string name="choose_width">Brush size</string>
    <string name="saved_your_location_to">Saved your artwork to %1$s</string>
    <string name="select">Select</string>
    <string name="continue_fuck">Continue</string> <!-- Workaround to avoid "R.string.continue", that it's as a special class-word! D: -->
    <string name="ok">OK</string>
    <string name="pick_color">Pick a Color</string>
    <string name="normal">Pencil</string>
    <string name="press_back_again">Press back again to exit!\n(Losing all the unsaved work)</string>
    <string name="select_image_to_open">Select image to open</string>
    <string name="ability_disabled_need_newer_api_level">That ability is disabled because it requires a newer Android version (at least API level 17).</string>

</resources>
