<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/color_menu"
        android:icon="@drawable/color"
        android:showAsAction="ifRoom"
        android:title="@string/color"/>
    <item
        android:id="@+id/erase_menu"
        android:icon="@drawable/erase"
        android:showAsAction="ifRoom"
        android:title="@string/erase">
    </item>
    <item
        android:id="@+id/clear_all_menu"
        android:icon="@drawable/clear_all"
        android:showAsAction="ifRoom"
        android:title="@string/clear_all">
    </item>
    <item
        android:id="@+id/normal_brush_menu"
        android:icon="@drawable/size"
        android:showAsAction="ifRoom"
        android:title="@string/normal">
    </item>
    <item
        android:id="@+id/go_shapes"
        android:title="Pick shapes">
        <menu>
            <item
                android:id="@+id/subMenuLine"
                android:showAsAction="ifRoom"
                android:title="Straight Line">
            </item>
            <item
                android:id="@+id/subMenuCircle"
                android:showAsAction="ifRoom"
                android:title="Circle">
            </item>
            <item
                android:id="@+id/subMenuEllipse"
                android:showAsAction="ifRoom"
                android:title="Ellipse">
            </item>
            <item
                android:id="@+id/subMenuSquare"
                android:showAsAction="ifRoom"
                android:title="Square">
            </item>
            <item
                android:id="@+id/subMenuRectangle"
                android:showAsAction="ifRoom"
                android:title="Rectangle">
            </item>
            <item
                android:id="@+id/subMenuPolygon"
                android:showAsAction="ifRoom"
                android:title="Polygon">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/save_menu"
        android:icon="@drawable/save"
        android:showAsAction="ifRoom"
        android:title="@string/save">
    </item>
    <item
        android:id="@+id/open_image_menu"
        android:icon="@drawable/import_image"
        android:showAsAction="ifRoom"
        android:title="@string/open_image">
    </item>

</menu>
